# lotto_translator

./: Cargo.toml  dictionary.json  paren_dictionary.json
src/: main.rs
