[package]
name = "lotto_translator"
version = "0.1.0"
edition = "2024"
default-run = "lotto_translator"

[dependencies]
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
